--- a/app/package.json
+++ b/app/package.json
@@ -23,9 +23,13 @@
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.3.4",
+    "class-validator": "^0.14.0",
     "gpu.js": "^2.16.0",
+    "moment": "^2.29.4",
+    "mongoose": "^6.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
