--- a/web_app/package.json
+++ b/web_app/package.json
@@ -14,7 +14,11 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "chart.js": "^4.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "sass": "^1.58.3"
