--- a/web_app/package.json
+++ b/web_app/package.json
@@ -16,11 +16,13 @@
     "@reduxjs/toolkit": "^1.9.3",
     "chart.js": "^4.2.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-zoom": "^2.0.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "sass": "^1.58.3"
   },
   "devDependencies": {
