--- a/web_app/package.json
+++ b/web_app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.3"
   },
   "devDependencies": {
