--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - mongodb_data_container:/data/db
+      - mongo-data:/data/db
 
 volumes:
-  mongodb_data_container:
+  mongo-data:
     driver: local
