--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "axios": "^1.3.4",
     "class-validator": "^0.14.0",
     "gpu.js": "^2.16.0",
