--- a/web_app/.env
+++ b/web_app/.env
@@ -1,8 +1,8 @@
 
 
 # #for local uses
-VITE_STOCK_PICKER_API = http://localhost:3000
+# VITE_STOCK_PICKER_API = http://localhost:3000
 
 #for docker installation in local add your ip 
-# VITE_STOCK_PICKER_API = http://mern-app:3000
+VITE_STOCK_PICKER_API = http://api-server:3000
 
