--- a/web_app/.env
+++ b/web_app/.env
@@ -4,5 +4,5 @@
 # VITE_STOCK_PICKER_API = http://localhost:3000
 
 #for docker installation in local add your ip 
-VITE_STOCK_PICKER_API = http://api-server:3000
+VITE_STOCK_PICKER_API = http://{server-ip-address/domainname/your-ip-address}:3000
 
