--- a/web_app/package.json
+++ b/web_app/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite"
+
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
