--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
       - mern-app
   api-server:
-    build: ./app
+    build: ./backend
     ports: 
       - "3000:3000"
     networks:
