--- a/web_app/package.json
+++ b/web_app/package.json
@@ -8,7 +8,6 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "vite"
-
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -19,6 +18,7 @@
     "chart.js": "^4.2.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-chartjs-2": "^5.2.0",
